--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <input type="password" id="password" name="password" pattern="[a-z0-5]{8,}" minlength="5" maxlength="15" required>
           </label></ul>
          <ul><label for="phone-number">Type in your phone number: 
-            <input type="number" name="phone-number" id="phone-number">
+            <input type="phoneNumber" name="phone-number" id="phone-number"  maxlength="10" required>
           </label> </ul>          
          <button>Submit</button>
           </fieldset>
